--- a/300_Aggregations/115_eager.asciidoc
+++ b/300_Aggregations/115_eager.asciidoc
@@ -152,7 +152,7 @@ PUT /music/_mapping/_song
 [[index-warmers]]
 ==== 索引预热器（Index Warmers）
 
-最后我们谈谈 _索引预热器_ 。预热器早于 ((("index warmers"))) fielddata 预加载和全局序号预加载之前出现，它们仍然尤其存在的理由。一个索引预热器允许我们指定一个查询和聚合须要在新分片对于搜索可见之前执行。
+最后我们谈谈 _索引预热器_ 。预热器早于 ((("index warmers"))) fielddata 预加载和全局序号预加载之前出现，它们仍然有其存在的理由。一个索引预热器允许我们指定一个查询和聚合须要在新分片对于搜索可见之前执行。
 这个想法是通过预先填充或 _预热缓存_ 让用户永远无法遇到延迟的波峰。
 
 原来，预热器最重要的用法是确保 fielddata 被预先加载，因为这通常是最耗时的一步。现在可以通过前面讨论的那些技术来更好的控制它，但是预热器还是可以用来预建过滤器缓存，当然我们也还是能选择用它来预加载 fielddata。
